# adventOfStats

./: CNAME  README.md  index.html  main.py  pyproject.toml
src/: main.py
static/: advent_of_code.json
